--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,16 @@ p {
     color: #F3BA2F;
 }
 
+.restartb {
+    display: flex;
+    justify-content: center;
+}
+
+.restartb button {
+    font-family: 'DotGothic16', sans-serif;
+    font-size: 24px;
+    border-radius: 10px;
+    background-color: rgba(55, 207, 121, 0.65);
+    color: white;
+    border-color: rgba(236, 214, 138, 0.9);
+}
