--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
+* {
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #1E2329;
-    min-width: 100vw;
+    width: 100%;
     min-height: 100vh;
     color: #F3BA2F;
 }
@@ -16,8 +22,6 @@ p {
     text-align: center;
     font-size: 32px;
 }
-
-
 
 .restartb {
     display: flex;
