--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ p {
     font-family: 'DotGothic16', sans-serif;
     font-size: 36px;
     border-radius: 10px;
+    padding: 5px;
     background-color: rgba(55, 207, 121, 0.65);
     color: white;
     border-color: rgba(236, 214, 138, 0.9);
@@ -40,17 +41,23 @@ p {
 .card-container {
     display: grid;
     justify-content: center;
-    grid-gap: 10px;
+    margin-top: 3%;
+    grid-gap: 40px;
     grid-template-columns: repeat(4, 120px);
     grid-template-rows: repeat(2, calc(120px / 2 * 3));
+}
+
+.tracker {
+    display: grid;
+    grid-template-rows: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 #winner {
     font-family: 'DotGothic16', sans-serif;
     text-align: center;
     padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   #winner > p {
@@ -83,13 +90,17 @@ p {
     width: 100%;
 }
 
-@media screen and (min-width: 890px) {
+@media screen and (min-width: 992px) {
     h1 {
         font-size: 92px;
     }
     .card-container {
+        grid-gap: 20px;
         grid-template-columns: repeat(6, 140px);
         grid-template-rows: repeat(2, calc(140px / 2 * 3));
+    }
+    .tracker {
+        font-size: 48px;
     }
     .restartb button {
         font-size: 36px;
