--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 h1 {
     font-family: 'DotGothic16', sans-serif;
     text-align: center;
-    font-size: 64px;
+    font-size: 48px;
 }
 
 p {
@@ -35,14 +35,27 @@ p {
     padding: 5px;
     background-color: rgba(55, 207, 121, 0.65);
     color: white;
-    border-color: rgba(236, 214, 138, 0.9);
+    border-color: #F3BA2F;
+}
+
+#htp-button {
+    position: fixed;
+    font-family: 'DotGothic16', sans-serif;
+    font-size: 14px;
+    border-radius: 5px;
+    top: 3%;
+    right: 5%;
+    padding: 5px;
+    background-color: rgba(55, 207, 121, 0.65);
+    color: white;
+    border-color: #F3BA2F;
 }
 
 .card-container {
     display: grid;
     justify-content: center;
     margin-top: 3%;
-    grid-gap: 40px;
+    grid-gap: 20px;
     grid-template-columns: repeat(4, 120px);
 }
 
@@ -93,6 +106,11 @@ p {
     h1 {
         font-size: 92px;
     }
+    #htp-button{
+        top: 3%;
+        right: 3%;
+        font-size: 20px;
+    }
     .card-container {
         grid-gap: 20px;
         grid-template-columns: repeat(6, 140px);
@@ -100,6 +118,9 @@ p {
     }
     .tracker {
         font-size: 48px;
+        display: flex;
+        margin-left: 25%;
+        margin-right: 25%;
     }
     .restartb button {
         font-size: 36px;
