--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,19 @@ p {
     width: 100%;
 }
 
+#howtoplay {
+    font-family: 'DotGothic16', sans-serif;
+    display: none;
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+#howtoplay ol {
+    text-align: center;
+    list-style-position: inside;
+}
+
 @media screen and (min-width: 992px) {
     h1 {
         font-size: 92px;
