--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 h1 {
     font-family: 'DotGothic16', sans-serif;
     text-align: center;
-    font-size: 48px;
+    font-size: 32px;
 }
 
 p {
@@ -30,7 +30,7 @@ p {
 
 .restartb button {
     font-family: 'DotGothic16', sans-serif;
-    font-size: 36px;
+    font-size: 14px;
     border-radius: 10px;
     padding: 5px;
     background-color: rgba(55, 207, 121, 0.65);
@@ -43,7 +43,7 @@ p {
     font-family: 'DotGothic16', sans-serif;
     font-size: 14px;
     border-radius: 5px;
-    top: 3%;
+    top: 1%;
     right: 5%;
     padding: 5px;
     background-color: rgba(55, 207, 121, 0.65);
@@ -56,7 +56,7 @@ p {
     justify-content: center;
     margin-top: 3%;
     grid-gap: 20px;
-    grid-template-columns: repeat(4, 120px);
+    grid-template-columns: repeat(4, 80px);
 }
 
 .tracker {
@@ -113,6 +113,37 @@ p {
 #howtoplay ol {
     text-align: center;
     list-style-position: inside;
+}
+
+@media screen and (min-width: 576px) {
+    h1 {
+       font-size: 48px; 
+    }
+    #htp-button {
+        position: fixed;
+        font-family: 'DotGothic16', sans-serif;
+        font-size: 16px;
+        top: 2%;
+        right: 2%;
+    }
+    .card-container {
+        grid-gap: 25px;
+        grid-template-columns: repeat(4, 80px);
+    }
+
+    .tracker {
+        font-size: 48px;
+        margin-left: 25%;
+        margin-right: 25%;
+    }
+
+    .restartb button {
+        font-size: 18px;
+    }
+
+    p {
+        font-size: 36px;
+    }
 }
 
 @media screen and (min-width: 992px) {
